images still not fixed but getting closer?

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -160,8 +160,6 @@
         Submit
       </button>
     </form>
-    what about specifically our images
-    <img src="https://www.thetvdb.com/banners/actors/351945.jpg" alt="" id="matchIMGdiv" />
   </div>
 
   <!-- Modal -->
@@ -177,7 +175,8 @@
         </div>
         <div class="modal-body">
           <h2><span id="matchNameDiv"></h2>
-          <img src="https://picsum.photos/seed/picsum/200/300" alt="" id="matchIMGdiv" />
+          <img src="" alt="" id="matchIMGdiv" />
+          <br/>
           We're sure you two will be great friends!
         </div>
       </div>
